--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		<table border="1px"  cellspacing="0px" bordercolor="gray" style="margin: 0 auto;font-size: 22px;" border-collapse:collapse;>
 			<tr>
 				<td>
-					<font style="text-align: right;">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong>General Chair</strong></font><br>
+					<font style="text-align: right;">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong>General Chair</strong></font><br>
 					<font style="color: rgb(0,112,192);font-size: 20px;" >Qingguo Zhou, Lanzhou University, China</font><br><br>
-					<strong>&emsp;&emsp;&emsp;&emsp;&emsp;Program Committee Chairs</strong><br>
+					<strong>&emsp;&emsp;&emsp;Program Committee Chairs</strong><br>
 					<font style="color: rgb(0,112,192);font-size: 20px;" >Wenzhi Chen, Zhejiang University, China<br>
 					Yan Luo, University of Massachusetts<br> Lowell, USA<br><br></font>
-					<strong>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Program Committee</strong><br>
+					<strong>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Program Committee</strong><br>
 					<font style="color: rgb(0,112,192);font-size: 20px;" >Jason C. Hung, Overseas Chinese<br>University, Taiwan<br>
 					Jeng Kuen Lee, National Tsing Hua<br>University, Taiwan<br>
 					Zhongwen Li, Chengdu University, China<br>
