--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
 					Huawei Zhao, Qilu University of<br>technology, China<br>
 					Lingxiang Zheng, Xiamen University,<br>China<br>
 					Xia Zhu, Intel, USA</font><br>
-					<strong>In ISADS submission site:<font style="font-size: 20px;"></strong><br><a href="https://www.easychair
-					.org/conferences/?conf
-					=isads2017" target="_blank">https://www.easychair<br>
-					.org/conferences/?conf<br>
-					=isads2017</a>, choose SADEI  track<br><br></font>
+					<strong>In ISADS submission site:</strong><br>
 					<strong>Important Dates</strong><br>
 					</font><font style="font-size: 20px;">Paper submission:  10/31/2016<br>
 					Author notification: 11/30/2016<br>
