--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					Lingxiang Zheng, Xiamen University,<br>China<br>
 					Xia Zhu, Intel, USA</font><br>
 					<strong>In ISADS submission site:</strong><br>
-					<a href="https://easychair.org/conferences/?conf=sadei2017">https://easychair.org/conferences/<br>?conf=sadei2017</a><br>
+					<a href="https://easychair.org/conferences/?conf=sadei2017" target="_blank">https://easychair.org/conferences/<br>?conf=sadei2017</a><br>
 					<strong>Important Dates</strong><br>
 					</font><font style="font-size: 20px;">Paper submission:  10/31/2016<br>
 					Author notification: 11/30/2016<br>
