--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	</head>
 	<body style="font-family: 'times new roman';font-size: 20px;">
 		<div style="width: 80%;margin: 0 auto;">
-		<h2 style="padding-left: 10%;"><strong>Call for Papers</strong></h2>
 		<p style="color: rgb(0,176,80);text-align: center;font-size: 30px;" ><strong>The 2nd International Workshop on<br>
 			Systems and Algorithms for Distributed Embedded Intelligence</strong></p>
 		<p style="color: rgb(0,176,80);text-align: center;font-size: 30px;"><strong>(SADEI 2017)<br>March 22 - 24, 2017, Bangkok, Thailand</strong></p>
@@ -14,12 +13,12 @@
 		<table border="1px"  cellspacing="0px" bordercolor="gray" style="margin: 0 auto;font-size: 22px;" border-collapse:collapse;>
 			<tr>
 				<td>
-					<font style="text-align: right;">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong>General Chair</strong></font><br>
+					<font style="text-align: right;"><strong>General Chair</strong></font><br>
 					<font style="color: rgb(0,112,192);font-size: 20px;" >Qingguo Zhou, Lanzhou University, China</font><br><br>
-					<strong>&emsp;&emsp;&emsp;&nbsp;&nbsp;Program Committee Chairs</strong><br>
+					<strong>Program Committee Chairs</strong><br>
 					<font style="color: rgb(0,112,192);font-size: 20px;" >Wenzhi Chen, Zhejiang University, China<br>
 					Yan Luo, University of Massachusetts<br> Lowell, USA<br><br></font>
-					<strong>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;Program Committee</strong><br>
+					<strong>Program Committee</strong><br>
 					<font style="color: rgb(0,112,192);font-size: 20px;" >Jason C. Hung, Overseas Chinese<br>University, Taiwan<br>
 					Jeng Kuen Lee, National Tsing Hua<br>University, Taiwan<br>
 					Zhongwen Li, Chengdu University, China<br>
