--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					Zhongdong Wu, Lanzhou Jiaotong<br>University, China<br>
 					Huawei Zhao, Qilu University of<br>technology, China<br>
 					Lingxiang Zheng, Xiamen University,<br>China<br>
-					Xia Zhu, Intel, USA</font><br>
-					<strong>In ISADS submission site:</strong><br>
+					Xia Zhu, Intel, USA</font><br><br>
+					<strong>SADEI 2017 submission site:</strong><br>
 					<a href="https://easychair.org/conferences/?conf=sadei2017" target="_blank">https://easychair.org/conferences/<br>?conf=sadei2017</a><br><br>
 					<strong>Important Dates</strong><br>
 					</font><font style="font-size: 20px;">Paper submission:  10/31/2016<br>
