--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         				affiliations, 150-word abstract and list of keywords. Please identify the contact<br>
         				author clearly, including name, position, mailing address, telephone number, and<br>
         				email address. At least one of the authors of each accepted paper must register<br>
-        				and present the paper at ISADS 2017. Authors must submit their manuscripts<br>
-        				electronically following the instructions at the ISADS 2017 web site at:<br>
-        				<a href="http://www.ieeethailand.org/isads2017.php" target="_blank">http://www.ieeethailand.org/isads2017.php</a> and choose the SADEI when submitting.</font>
+        				and present the paper at SADEI 2017. Authors must submit their manuscripts<br>
+        				electronically following the instructions at the SADEI 2017web site at:<br>
+        				<a href="http://www.ieeethailand.org/isads2017.php" target="_blank">http://www.ieeethailand.org/isads2017.php</a>.</font>
 				</td>
 			</tr>
 		</table>
