--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         				email address. At least one of the authors of each accepted paper must register<br>
         				and present the paper at SADEI 2017. Authors must submit their manuscripts<br>
         				electronically following the instructions at the SADEI 2017web site at:<br>
-        				<a href="http://www.ieeethailand.org/isads2017.php" target="_blank">http://www.ieeethailand.org/isads2017.php</a>.</font>
+        				<a href="https://easychair.org/conferences/?conf=sadei2017" target="_blank">https://easychair.org/conferences/?conf=sadei2017</a>.</font>
 				</td>
 			</tr>
 		</table>
